tests/baselines/reference/parserMemberAccessExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(1,1): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(1,5): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(2,1): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(2,9): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(3,1): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(3,8): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(3,8): error TS2304: Cannot find name 'Bar'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(4,1): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(4,8): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(4,8): error TS2304: Cannot find name 'Bar'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(4,12): error TS2304: Cannot find name 'T'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts (11 errors) ====
    Foo<T>();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
        ~
!!! error TS2304: Cannot find name 'T'.
    Foo.Bar<T>();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
            ~
!!! error TS2304: Cannot find name 'T'.
    Foo<T>.Bar();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
           ~~~
!!! error TS1005: ';' expected.
           ~~~
!!! error TS2304: Cannot find name 'Bar'.
    Foo<T>.Bar<T>();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
           ~~~
!!! error TS1005: ';' expected.
           ~~~
!!! error TS2304: Cannot find name 'Bar'.
               ~
!!! error TS2304: Cannot find name 'T'.
    